--- a/views/email/contact.hbs
+++ b/views/email/contact.hbs
@@ -1,4 +1,5 @@
-<h1>Formulari de contacte</h1>
+{{> header }}
+
 <p>
     Nom: {{name}}
     <br/>
@@ -9,3 +10,5 @@
 <p>
   Missatge: {{message}}
 </p>
+
+{{> footer }}
