fixed? partials not found

--- a/views/email/contact.hbs
+++ b/views/email/contact.hbs
@@ -1,4 +1,4 @@
-{{> header }}
+{{> partials/header }}
 
 <p>
     Nom: {{name}}
@@ -11,4 +11,4 @@
   Missatge: {{message}}
 </p>
 
-{{> footer }}
+{{> partials/footer }}
