--- a/views/email/partials/footer.hbs
+++ b/views/email/partials/footer.hbs
@@ -1,1 +1,42 @@
-<p>Recibes este mensaje porque formas parte del AMPA CEIP La patacona. Si no deseas seguir recibiendo estos mensajes. Puedes darte de baja entrando en tu perfil des de <a href="https://ampatacona.com">ampatacona.com</a>.</p>
+ ${message}
+                          </div>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+
+              <!-- END MAIN CONTENT AREA -->
+              </table>
+
+              <!-- START FOOTER -->
+              <div class="footer" style="clear: both; Margin-top: 10px; text-align: center; width: 100%;">
+                <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
+                  <tr>
+                    <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
+                      <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center; font-weight: bold;">Asociación de Madres y Padres de Alumnos del CEIP La Patacona</span>
+                        <br>
+                        <span>C.I.F.: G97499008.</span><br>
+                        <span>Registro Asoc. CV-01-038031-V</span><br>
+                        <span>Avenida de la Calderona No 1 ; 46120 Alboraya, Valencia (VALENCIA)</span><br>
+                        <span><em>hola@ampatacona.com</em></span><br>
+                      Pots gestionar les teues dades i els missatges que reps en aquest <a href="https://ampatacona.com" target="_blank" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">enllaç</a>.
+                    </td>
+                  </tr>
+                  <tr>
+                    <!-- <td class="content-block powered-by" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
+                      Powered by <a href="http://htmlemail.io" style="color: #999999; font-size: 12px; text-align: center; text-decoration: none;">HTMLemail</a>.
+                    </td> -->
+                  </tr>
+                </table>
+              </div>
+              <!-- END FOOTER -->
+
+            <!-- END CENTERED WHITE CONTAINER -->
+            </div>
+          </td>
+          <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">&nbsp;</td>
+        </tr>
+      </table>
+    </body>
+  </html>
