--- a/views/email/partials/header.hbs
+++ b/views/email/partials/header.hbs
@@ -95,7 +95,7 @@
               <!-- START CENTERED WHITE CONTAINER -->
               <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">AMPA CEIP La Patacona</span>
               <!-- LOGO -->
-          <div style="text-align: center; margin-bottom: 10px;"><a href="https://ampatacona.com" target="_blank"><img width="203px" height="103px" src="https://ampatacona.com/logo-mail.png" alt="AMPA" /></a></div>
+          <div style="text-align: center; margin-bottom: 10px;"><a href="https://ampatacona.com" target="_blank"><img width="203px" height="103px" src="https://ampatacona.com/logo-email.png" alt="AMPA" /></a></div>
               <table class="main" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #ffffff; border-radius: 3px;">
 
                 <!-- START MAIN CONTENT AREA -->
