--- a/views/email/partials/footer.hbs
+++ b/views/email/partials/footer.hbs
@@ -17,8 +17,8 @@
                       <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center; font-weight: bold;">Asociación de Madres y Padres de Alumnos del CEIP La Patacona</span>
                         <br>
                         <span>C.I.F.: G97499008.</span><br>
-                        <span>Registro Asoc. CV-01-038031-V</span><br>
-                        <span>Avenida de la Calderona No 1 ; 46120 Alboraya, Valencia (VALENCIA)</span><br>
+                        <span>Registre Assoc. CV-01-038031-V</span><br>
+                        <span>Avinguda de la Calderona No 1 - 46120 Alboraia.</span><br>
                         <span><em>hola@ampatacona.com</em></span><br>
                       Pots gestionar les teues dades i els missatges que reps en aquest <a href="https://ampatacona.com" target="_blank" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">enllaç</a>.
                     </td>
