--- a/views/email/partials/footer.hbs
+++ b/views/email/partials/footer.hbs
@@ -14,7 +14,7 @@
                 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                   <tr>
                     <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
-                      <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center; font-weight: bold;">Asociación de Madres y Padres de Alumnos del CEIP La Patacona</span>
+                      <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center; font-weight: bold;">Associació de Mares i Pares d'Alumnes del CEIP La Patacona</span>
                         <br>
                         <span>C.I.F.: G97499008.</span><br>
                         <span>Registre Assoc. CV-01-038031-V</span><br>
